[package]
name = "crossword"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
sqlite = "0.27.0"
crossterm = "0.17.5"
rusty_audio = "1.4.0"
rusty_time = "0.11.0"
rand = "0.8.5"
enable-ansi-support = "0.1.2"